# lily-photos

./: .gitignore  Cargo.toml  README.md  config.toml
embedded/: app.css  app.js  index.html
scripts/: build_macos_app.sh  build_windows_release.sh
src/: app.rs  auth.rs  config.rs  db.rs  main.rs  media.rs  model.rs
src/routes/: api.rs
static/js/: index.js
templates/: index.html
