[package]
name = "lily-nest"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.7"
tower-http = { version = "0.6.8", features = ["fs"] }
