[package]
name = "lily-nest"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
http = "1.3.1"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = [] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
